tests/snapshots/search_navigation_test__forward_search_from_middle.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hello world [h]ello test
