tests/snapshots/search_navigation_test__forward_search_multiline.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 3:0
Lines: 4

Buffer:
line 1
line 2
line 3
[t]arget here
