tests/snapshots/search_navigation_test__forward_search_not_found.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[h]ello world
