tests/snapshots/search_navigation_test__forward_search_regex.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:14
Lines: 1

Buffer:
test123 hello [t]est456
