tests/snapshots/search_navigation_test__forward_search_wrap_around.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:15
Lines: 1

Buffer:
start middle en[d]
