tests/snapshots/search_navigation_test__hash_search_word_backward.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:21
Lines: 1

Buffer:
hello world hello tes[t]
