tests/snapshots/search_navigation_test__noh_clears_highlight.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hello world [h]ello
