tests/snapshots/search_navigation_test__search_across_lines.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
hello
[w]orld
