tests/snapshots/search_navigation_test__search_at_end_of_line.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
hello worl[d]
