tests/snapshots/search_navigation_test__search_beginning_of_line.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
  hello
  world
[t]est
