tests/snapshots/search_navigation_test__search_end_of_line.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 3

Buffer:
[h]ello world
test case
end
