tests/snapshots/search_navigation_test__search_history_up.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Search
Cursor: 0:0
Lines: 1

Buffer:
[h]ello world
